--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name="at.aau.serg.websocketbrokerdemo.DiceActivity"
+            android:exported="false" />
+        <activity
             android:name="at.aau.serg.websocketbrokerdemo.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
