--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name="at.aau.serg.websocketbrokerdemo.ui.activities.GameViewActivity"
+            android:exported="false" />
+        <activity
             android:name="at.aau.serg.websocketbrokerdemo.ui.activities.DiceActivity"
             android:exported="false" />
         <activity
