--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
-        <!-- Starte hier: LobbyActivity -->
+        <!-- UsernameActivity: Login Screen -->
         <activity
-            android:name="at.aau.serg.websocketbrokerdemo.LobbyActivity"
+            android:name="at.aau.serg.websocketbrokerdemo.UsernameActivity"
             android:exported="true"
             android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
             <intent-filter>
@@ -27,11 +27,17 @@
             </intent-filter>
         </activity>
 
+        <!-- LobbyActivity: Lobby Screen -->
+        <activity
+            android:name="at.aau.serg.websocketbrokerdemo.LobbyActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar" />
 
-        <!-- MainActivity: KEIN intent-filter mehr -->
+        <!-- MainActivity: Spiel -->
         <activity
             android:name="at.aau.serg.websocketbrokerdemo.MainActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar" />
     </application>
 
 </manifest>
