--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,9 +35,16 @@
 
         <!-- MainActivity: Spiel -->
         <activity
-            android:name="at.aau.serg.websocketbrokerdemo.MainActivity"
+            android:name="at.aau.serg.websocketbrokerdemo.ListLobby"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar" />
+
+        <!-- LobbyActivity: Lobby List Screen -->
+        <activity
+            android:name="at.aau.serg.websocketbrokerdemo.CreateLobbyActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar" />
+
     </application>
 
 </manifest>
