Supporting Multiple Lobbies on client

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
+
         <!-- UsernameActivity: Login Screen -->
         <activity
-            android:name="at.aau.serg.websocketbrokerdemo.UsernameActivity"
+            android:name="at.aau.serg.websocketbrokerdemo.ListLobbyActivity"
             android:exported="true"
             android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
             <intent-filter>
@@ -37,9 +38,23 @@
 
         <!-- MainActivity: Spiel -->
         <activity
+            android:name="at.aau.serg.websocketbrokerdemo.UsernameActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar" />
+
+        <!-- LobbyActivity: Lobby List Screen -->
+        <activity
+            android:name="at.aau.serg.websocketbrokerdemo.CreateLobbyActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar" />
+
+        <!-- MainActivity: Spiel -->
+        <activity
             android:name="at.aau.serg.websocketbrokerdemo.MainActivity"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar" />
+
+
     </application>
 
 </manifest>
