--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,10 +48,10 @@
             android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar" />
 
         <!-- MainActivity: Spiel -->
-        <activity
-            android:name="at.aau.serg.websocketbrokerdemo.MainActivity"
-            android:exported="false"
-            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar" />
+<!--        <activity-->
+<!--            android:name="at.aau.serg.websocketbrokerdemo.MainActivity"-->
+<!--            android:exported="false"-->
+<!--            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar" />-->
 
     </application>
 
