--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.9.1"
 androidxJunit = "1.1.5"
 core = "1.5.0"
+gridlayout = "1.1.0"
 json = "20231013"
 junitJupiterApiVersion = "5.8.2"
 junitJupiterEngine = "5.8.2"
@@ -29,6 +30,7 @@ robolectric = "4.10.3"
 
 [libraries]
 androidx-core = { module = "androidx.test:core", version.ref = "core" }
+androidx-gridlayout = { module = "androidx.gridlayout:gridlayout", version.ref = "gridlayout" }
 androidx-junit-v115 = { module = "androidx.test.ext:junit", version.ref = "androidxJunit" }
 json = { module = "org.json:json", version.ref = "json" }
 junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junitJupiterApi" }
